tests/ui/errors/invalid_child.stderr
error: invalid child: expected literal, block, bracket or element
 --> tests/ui/errors/invalid_child.rs:6:9
  |
6 |         (a)
  |         ^

error: extra semi-colon found
  --> tests/ui/errors/invalid_child.rs:37:27
   |
37 |         div { "hi there" };
   |                           ^
   |
   = help: remove this semi-colon

error[E0277]: the trait bound `&&str: IntoView` is not satisfied
  --> tests/ui/errors/invalid_child.rs:17:14
   |
17 |             {value}
   |             -^^^^^-
   |             ||
   |             |the trait `Fn()` is not implemented for `str`, which is required by `&&str: IntoView`
   |             required by a bound introduced by this call
   |
   = help: the trait `IntoView` is implemented for `&'static str`
   = note: required for `&str` to implement `FnOnce()`
   = note: required for `&&str` to implement `IntoView`
note: required by a bound in `leptos::HtmlElement::<El>::child`
  --> $CARGO/leptos_dom-0.6.12/src/html.rs
   |
   |     pub fn child(self, child: impl IntoView) -> Self {
   |                                    ^^^^^^^^ required by this bound in `HtmlElement::<El>::child`

error[E0277]: the trait bound `std::iter::Map<std::vec::IntoIter<&str>, {closure@$DIR/tests/ui/errors/invalid_child.rs:27:22: 27:33}>: IntoView` is not satisfied
  --> tests/ui/errors/invalid_child.rs:25:14
   |
25 |                {values
   |  ______________-^
   | | ______________|
26 | ||                 .into_iter()
27 | ||                 .map(|val: &str| {
28 | ||                     mview! { li({val}) }
29 | ||                 })
   | ||__________________^ the trait `Fn()` is not implemented for `std::iter::Map<std::vec::IntoIter<&str>, {closure@$DIR/tests/ui/errors/invalid_child.rs:27:22: 27:33}>`, which is required by `std::iter::Map<std::vec::IntoIter<&str>, {closure@$DIR/tests/ui/errors/invalid_child.rs:27:22: 27:33}>: IntoView`
30 | |              }
   | |______________- required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoView`:
             &'static str
             &Fragment
             &leptos::View
             &std::string::String
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
           and $N others
   = note: required for `std::iter::Map<std::vec::IntoIter<&str>, {closure@$DIR/tests/ui/errors/invalid_child.rs:27:22: 27:33}>` to implement `IntoView`
note: required by a bound in `leptos::HtmlElement::<El>::child`
  --> $CARGO/leptos_dom-0.6.12/src/html.rs
   |
   |     pub fn child(self, child: impl IntoView) -> Self {
   |                                    ^^^^^^^^ required by this bound in `HtmlElement::<El>::child`

warning: unreachable call
  --> tests/ui/errors/invalid_child.rs:46:13
   |
46 |             {todo!()}
   |             ^-------^
   |             ||
   |             |any code following this expression is unreachable
   |             unreachable call
   |
   = note: `#[warn(unreachable_code)]` on by default

warning: unused variable: `a`
 --> tests/ui/errors/invalid_child.rs:4:9
  |
4 |     let a = "a";
  |         ^ help: if this is intentional, prefix it with an underscore: `_a`
  |
  = note: `#[warn(unused_variables)]` on by default
